fixed mobile version, about slider z-index and changed mobile header

--- a/css/style.css
+++ b/css/style.css
@@ -98,17 +98,16 @@ embed, object, iframe{max-width: 100%;}
 /*Intro Fullscreen Slideshow*/
 .intro-slide {
 	position: fixed;
-	width: 100%;
+	max-width: 100%;
 	height: auto;
-	min-height: 100%;
 	z-index: -100;
 	top: 0;
 	left: 0;
 	overflow: hidden;
 }
 .intro-slide img {
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	height: auto;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-color: #f1f0e9;
@@ -116,17 +115,7 @@ embed, object, iframe{max-width: 100%;}
 	position: fixed;
 	top: 0;
 	left: 0;
-	-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;	
-	/*opacity: 0;*/
-	filter: alpha(opacity=0);/*for ie8*/
-	-webkit-transition: all 2s ease-out;
-	-moz-transition: all 2s ease-out;
-	-ms-transition: all 2s ease-out;
-	-o-transition: all 2s sease-out;
-	transition: all 2s sease-out;
+	overflow: hidden;
 }
 .intro-slide img.current {
 	opacity: 1;
@@ -146,7 +135,7 @@ header {
 	background-color: rgba(9,31,9,1);
 	height: 90px;
 	position: relative;
-	z-index: 5;
+	z-index: 199;
 }
 .stiky.stuck {
 	position: fixed;
@@ -344,13 +333,19 @@ li.dropdown.open a {
 }
 .about-slider {
 	position: relative;
+	max-width: 100%;
+	height: 570px;
+	overflow: hidden;
+	z-index: 1;
+}
+.about-slider-inner {
 	width: 100%;
 	height: 570px;
 	overflow: hidden;
 }
-.about-slider-inner {
+.about-slider-inner img {
 	width: 100%;
-	z-index: 1;
+	height: 570px;
 }
 .info-box {
 	position: absolute;
@@ -374,8 +369,7 @@ li.dropdown.open a {
 	top: 0;
 	padding: 55px 0;
 }
-.pager {
-	height: 25px;
+.info-box {
 	margin: 0 0 45px 0;
 }
 .pager span {
@@ -1881,8 +1875,11 @@ input.hint {
 	}
 	.logo {
 		width: 140px;
-		left: 20px;
 		margin-left: 0;
+		top: 5px;
+		left: 5px;
+		border-radius: 50%;
+		background: rgba(9,31,9,0.5) url(../img/logo-casa-itaici.svg) -27px -10px no-repeat !important;
 	}
 	header .container {
 		width: 100%;
@@ -1890,6 +1887,7 @@ input.hint {
 	.stiky {
 		position: fixed;
 		top: 0;
+		background-color: transparent !important;
 	}
 	.info-box, .info {
 		max-width: 100%;
@@ -2123,7 +2121,22 @@ input.hint {
 	#about, .mdesk {
 		display: block !important;
 	}
-	
+	.about-img {
+		visibility: hidden;
+	}
+	.intro-slide {
+		height: 350px !important;
+	}
+	.intro-slide img {
+		width: 623px !important;
+		height: 350px !important;
+	}
+	.logo {
+		width: 90px;
+	}
+	.stiky {
+		height: 90px;
+	}
 }
 
 /*Phone*/
@@ -2135,6 +2148,22 @@ input.hint {
 	}
 	#about, .mdesk {
 		display: block !important;
+	}
+	.about-img {
+		visibility: hidden;
+	}
+	.intro-slide {
+		height: 350px !important;
+	}
+	.intro-slide img {
+		width: 623px !important;
+		height: 350px !important;
+	}
+	.logo {
+		width: 90px;
+	}
+	.stiky {
+		height: 90px;
 	}
 	
 }
